--- a/src/assest/scss/Main.scss
+++ b/src/assest/scss/Main.scss
@@ -1,1 +1,4 @@
-@import './LenderCard'
+@import './LenderCard';
+@import './TransactionHeader';
+@import './EmiHeader';
+@import './VerificationCard';
